tests/parse/snapshots/file_tests__parse__err_brace_in_expr.lx@unexpected.snap
---
source: tests/parse.rs
description: "var x = 4 + } // Should sync here and find next error\nprint var;\n\n"
expression: render_dcx()
---
error: unexpected `}` token in input
  --> err_brace_in_expr.lx@unexpected:1:13
  |
1 | var x = 4 + } // Should sync here and find next error
  |             ^ unexpected token here

error: unexpected keyword `var` token in input
  --> err_brace_in_expr.lx@unexpected:2:7
  |
2 | print var;
  |       ^^^ unexpected token here
  |
  = note: expected expression
